# bomber-game

./: Cargo.toml  Makefile  README.md  run.sh
assets/: Tiled_BaseMap.json  Tiled_BaseMap.tmx  Tiled_Tiles.json  Tiled_Tiles.tsx  tiled-sample.tiled-session
client/: Cargo.toml
client/assets/: Tiled_BaseMap.json  Tiled_BaseMap.tmx  Tiled_Tiles.json  tiled-sample.tiled-session
client/src/: constants.rs  gui.rs  js_interop.rs  main.rs  nodes.rs  physics.rs
client/src/gui/: lobby.rs  mainmenu.rs  style.rs
client/src/nodes/: api.rs  bomb.rs  camera.rs  destroyable.rs  fire.rs  level_bg.rs  player.rs  remote_player.rs  walls.rs  ws.rs
nserde-into-vec/: Cargo.toml
nserde-into-vec/src/: lib.rs
server/: .env  Cargo.toml
server/src/: api.rs  how.rs  main.rs  routes.rs  startup.rs  ws.rs
server/src/ws/: actors.rs  messages.rs  start_connection.rs
server/src/ws/actors/: lobby.rs  ws.rs
shared/: Cargo.toml
shared/src/: lib.rs  messages.rs
src/: gui.rs  js_interop.rs  main.rs  nodes.rs
src/gui/: credits.rs  mainmenu.rs
src/nodes/: bomb.rs  camera.rs  destroyable.rs  fire.rs  level_bg.rs  player.rs  walls.rs
web/: .gitignore  index.html
www/: README.md  package.json  tsconfig.json
www/components/: Game.module.scss  Game.tsx
www/pages/: Head.tsx  index.tsx
www/public/: .gitignore  manifest.json
www/utils/: GlLoader.tsx  gl.d.ts  gl.js  sapp_jsutils.d.ts  sapp_jsutils.js
