[package]
name = "bomber"
version = "0.1.0"
edition = "2018"
authors = [
    "Roberts Ivanovs <robertsivanovs1999@gmail.com>",
    "Kristofers Volkovs <krystoart@gmail.com>",
    "Ronalds Palacis <ronalds.palacis@outlook.com>",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
nanoserde = "0.1"
macroquad-tiled = "0.1"
macroquad-platformer = "0.1"
macroquad-particles = { version = "0.1", features = ["nanoserde"] }
sapp-jsutils = "0.1"
rapier2d = { version = "*", features = [ "simd-stable" ] }
