[package]
name = "bomber"
version = "0.1.0"
edition = "2018"
authors = [
    "Roberts Ivanovs <robertsivanovs1999@gmail.com>",
    "Kristofers Volkovs <krystoart@gmail.com>",
    "Ronalds Palacis <ronalds.palacis@outlook.com>",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bomber-shared = { path = "../shared" }
macroquad = "0.3"
nanoserde = "0.1.28"
macroquad-tiled = "0.1"
macroquad-platformer = "0.1"
macroquad-particles = { version = "0.1", features = ["nanoserde"] }
sapp-jsutils = "0.1"
quad-net = { git = "https://github.com/not-fl3/quad-net", commit="207da3a", features = ["nanoserde"] }
sapp-console-log = "0.1.9"
log = "0.4.14"
rapier2d = { version = "0.10", features = [ "wasm-bindgen" ] }
nalgebra = { version = "0.28", features = ["convert-glam014"] }
