[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
futures = "0.3.15"
web3 = "0.16.0"

[dependencies.tokio-stream]
version = "0.1.1"
features = ["net"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.warp]
features = ["websocket"]
